--- a/question.html
+++ b/question.html
@@ -212,7 +212,7 @@
         { question: "What is the White Rabbit’s catchphrase?", correct: "D", options: ["A. Let's go, let's go, let's go!", "B. Hurry up, hurry up, hurry up!", "C. My time has come! ", "D. I'm late, I'm late, I'm late!"] },
         { question: "How many songs are in Alice in Wonderland?", correct: "B", options: ["A. 7", "B. 14", "C. 11", "D. 5"] },
         { question: "What color dress does Alice wear?", correct: "A", options: ["A. Blue and White", "B. Orange And White", "C. Purple and Blue", "D. Red and Blue"] },
-        { question: "What is the Queen's full name?", correct: "A", options: ["A. The Queen of Hearts", "B. The Queen of Spades", "C. The Queen of Clubs", "D. The Queen of Diamonds"] },
+        { question: "What is the Queen's full name?", correct: "D", options: ["A. The Queen of Diamond", "B. The Queen of Spades", "C. The Queen of Clubs", "D. The Queen of Hearts"] },
         { question: "When was Alice in Wonderland released (animated version)?", correct: "A", options: ["A. 1951", "B. 1965", "C. 1949", "D. 1970"] },
         { question: "What game does Alice play?", correct: "B", options: ["A. Football", "B. Croquet", "C. Horseshoes", "D. Basketball"] },
         { question: "What is the name of Alice's cat?", correct: "A", options: ["A. Dinah", "B. Joey", "C. Aram", "D. Yakub"] },
@@ -224,10 +224,10 @@
         { question: "What is the first thing the Mad Hatter does to the White Rabbit's watch?", correct: "D", options: ["A. Eats it", "B. Throws it away", "C. Kicks it", "D. Dunks it in tea"] },
         { question: "Why couldn't the White Queen defeat the Jabberwocky herself?", correct: "A", options: ["A. It was against her vows", "B. She was tired", "C. She couldn't find her", "D. She didn't have the time"] },
         { question: "Which character sings 'Twas Brillig'?", correct: "B", options: ["A. The Caterpillar", "B. The Cheshire Cat", "C. Tweedledum and Tweedledee", "D. The March Hare"] },
-        { question: "How tall is the caterpillar?", correct: "D.", options: ["A. One foot", "B. Three inches", "C. Nine inches", "D. 2 Feet"] },
+        { question: "How tall is the caterpillar?", correct: "D", options: ["A. One foot", "B. Three inches", "C. Nine inches", "D. 2 Feet"] },
         { question: "Where is the Red Queen's castle?", correct: "A", options: ["A. Salazen Grum", "B. Tulgey Wood", "C. Marmoreal", "D. The Stable"] },
         { question: "What is the name of the \"Lizard with the ladder\"?", correct: "A", options: ["A. Bill", "B. Smith", "C. Himzel", "D. Lizzy"] },
-        { question: "What two animals were used in the croquet game?", correct: "B. ", options: ["A. Owl and Caterpiller", "B. Flamingo and hedgehog", "C. Dog and Cat", "D. Kittyo and Car"] },
+        { question: "What two animals were used in the croquet game?", correct: "B", options: ["A. Owl and Caterpiller", "B. Flamingo and hedgehog", "C. Dog and Cat", "D. Kittyo and Car"] },
         { question: "What colour were the roses being painted?", correct: "C", options: ["A. Blue", "2. Purple", "3. Red", "4. Pink"] },
         { question: "What month was on the calendar behind mother oyster in the oyster bed?", correct: "A", options: ["A. March", "B. October", "C. April", "D. None listed"] },
         { question: "Which ingredients are in the \"sauce that's fit for kings\"?", correct: "B", options: ["A. Paprika, chili powder, cumin, and white pepper", "B. Pepper, salt, vinegar, peppercorns, and mustard seeds", "C. Mustard grains, apple cider vinegar, and blue salt", "D. Cayenne, starch, and ketchup"] },
