--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 
-<h1 id ="title">Welcome to <br> <span id="head-text">😧 Into the Trivia Hole 😧</span></h1>
+<h1 ><span id="head-text">Into the Trivia Hole</span></h1>
 
 <div id ="user-input">
-
-<p id="username-txt">Enter your Username:</p>
 
 <form onsubmit="redirectAfterSubmit(event)">
     <label for="username">Username:</label>
