--- a/question.html
+++ b/question.html
@@ -8,7 +8,7 @@
     .question {
         width: max-content;
         height: 100%;
-        background-color: rgb(173, 216, 230, 0.6);
+        background-color: rgb(235, 201, 109, 0.7) ;
         text-align: center;
         font-size: 30px;
         border: 5px outset black;
@@ -169,20 +169,26 @@
         if (someVar == 0) {
             someVar++;
             document.body.style.backgroundImage = "url(aliceBackground.png)";
+            question.style.backgroundColor = 'rgb(235, 201, 109, 0.7)';
         } else if (someVar == 1) {
             someVar++;
             document.body.style.backgroundImage = "url('aliceBackground.png')";
+            question.style.backgroundColor = 'rgb(235, 201, 109, 0.7)';
+
         } else if (someVar == 2) {
             someVar++;
             document.body.style.backgroundImage = "url(aliceBackground.png)";
+            question.style.backgroundColor = 'rgb(235, 201, 109, 0.7)';
         }
         else if (someVar <= 15) {
             someVar++;
             document.body.style.backgroundImage = "url(invertedAliceBackground.png)";
+            question.style.backgroundColor = 'rgb(173, 216, 230, 0.6)';
 
         } else {
             someVar = 0;
             document.body.style.backgroundImage = "url('invertedAliceBackground.png')";
+            question.style.backgroundColor = 'rgb(173, 216, 230, 0.6)';
         }
     }
 
@@ -249,6 +255,7 @@
             trueQ = document.getElementById('question').textContent;
         }
         else {
+            alert("Game Over!")
             localStorage.setItem("finalScore", points);
             window.location.href = "leaderboard.html";   
         }
@@ -291,7 +298,6 @@
     }
     let username = "name";
     let questionCount = 5;
-
     firstRun(localStorage.getItem('username'), localStorage.getItem('questions'));
 </script>
 
