--- a/question.html
+++ b/question.html
@@ -222,7 +222,7 @@
         { question: "When was Alice in Wonderland released (animated version)?", correct: "A", options: ["A. 1951", "B. 1965", "C. 1949", "D. 1970"] },
         { question: "What game does Alice play?", correct: "B", options: ["A. Football", "B. Croquet", "C. Horseshoes", "D. Basketball"] },
         { question: "What is the name of Alice's cat?", correct: "A", options: ["A. Dinah", "B. Joey", "C. Aram", "D. Yakub"] },
-        { question: "Which animal does Alice follow into Wonderland?", correct: "B", options: ["A. A mouse", "B. Rabbit", "C. Horse", "D. Cat"] },
+        { question: "Which animal does Alice follow into Wonderland?", correct: "B", options: ["A. Mouse", "B. Rabbit", "C. Horse", "D. Cat"] },
         { question: "Who wrote Alice’s Adventures in Wonderland?", correct: "C", options: ["A. James Franklin", "B. Mark Danielowski", "C. Lewis Carroll", "D. Cathy Newman"] },
         { question: "What type of flower conducts the floral orchestra?", correct: "B", options: ["A. Lily", "B. Rose", "C. Daisy", "D. Orchid"] },
         { question: "According to the Queen of Hearts, people over what height are not permitted in the court?", correct: "D", options: ["A. One meter", "A yard", "A foot", "A mile"] },
