css changes to leaderboard

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -4,21 +4,24 @@
         <link rel = "stylesheet" type="text/css" href="leaderboard.css">
         <title>Current Rankings</title>
     </head>
-
-    <h1 class ="general" id="title">🏆 Current Rankings 🏆</h1>
+    <br>
+    <div id = "div">
+        <h1 class ="general" id="h1">🏆 Current Rankings 🏆</h1>
+    </div>
     <body>
-        <table class="general" id="table">
-            <thead>
-                <tr>
-                    <th>Username</th>
-                    <th>Points</th>
-                </tr>
-            </thead>
-            <tbody>
-               <!--INSERT TR's -->
-
-            </tbody>
-    </table>
+        <br><br><br>
+            <table class="general" id="table">
+                <thead>
+                    <tr>
+                        <th>Username</th>
+                        <th>Points</th>
+                    </tr>
+                </thead>
+                <tbody>
+                   <!--INSERT TR's -->
+    
+                </tbody>
+        </table>
     </body>
 
 
