--- a/question.html
+++ b/question.html
@@ -225,7 +225,7 @@
         { question: "Which animal does Alice follow into Wonderland?", correct: "B", options: ["A. Mouse", "B. Rabbit", "C. Horse", "D. Cat"] },
         { question: "Who wrote Alice’s Adventures in Wonderland?", correct: "C", options: ["A. James Franklin", "B. Mark Danielowski", "C. Lewis Carroll", "D. Cathy Newman"] },
         { question: "What type of flower conducts the floral orchestra?", correct: "B", options: ["A. Lily", "B. Rose", "C. Daisy", "D. Orchid"] },
-        { question: "According to the Queen of Hearts, people over what height are not permitted in the court?", correct: "D", options: ["A. One meter", "A yard", "A foot", "A mile"] },
+        { question: "According to the Queen of Hearts, people over what height are not permitted in the court?", correct: "D", options: ["A. One meter", "B. A yard", "C. A foot", "D. A mile"] },
         { question: "What beloved item did the March Hare destroy?", correct: "C", options: ["A. Key", "B. Clock", "C. Pocket Watch", "D. Bracelet"] },
         { question: "What is the first thing the Mad Hatter does to the White Rabbit's watch?", correct: "D", options: ["A. Eats it", "B. Throws it away", "C. Kicks it", "D. Dunks it in tea"] },
         { question: "Why couldn't the White Queen defeat the Jabberwocky herself?", correct: "A", options: ["A. It was against her vows", "B. She was tired", "C. She couldn't find her", "D. She didn't have the time"] },
@@ -234,12 +234,12 @@
         { question: "Where is the Red Queen's castle?", correct: "A", options: ["A. Salazen Grum", "B. Tulgey Wood", "C. Marmoreal", "D. The Stable"] },
         { question: "What is the name of the \"Lizard with the ladder\"?", correct: "A", options: ["A. Bill", "B. Smith", "C. Himzel", "D. Lizzy"] },
         { question: "What two animals were used in the croquet game?", correct: "B", options: ["A. Owl and Caterpiller", "B. Flamingo and hedgehog", "C. Dog and Cat", "D. Kittyo and Car"] },
-        { question: "What colour were the roses being painted?", correct: "C", options: ["A. Blue", "2. Purple", "3. Red", "4. Pink"] },
+        { question: "What colour were the roses being painted?", correct: "C", options: ["A. Blue", "B. Purple", "C. Red", "D. Pink"] },
         { question: "What month was on the calendar behind mother oyster in the oyster bed?", correct: "A", options: ["A. March", "B. October", "C. April", "D. None listed"] },
         { question: "Which ingredients are in the \"sauce that's fit for kings\"?", correct: "B", options: ["A. Paprika, chili powder, cumin, and white pepper", "B. Pepper, salt, vinegar, peppercorns, and mustard seeds", "C. Mustard grains, apple cider vinegar, and blue salt", "D. Cayenne, starch, and ketchup"] },
-        { question: "The Mad Hatter's name is based on what historical basis?", correct: "B", options: ["A. People who wore hats were crazy", "B. Mercury was used in hat making", "C. Hat making as seen as an unskilled profession", "Hats were once believed to make people go crazy"] },
-        { question: "Which character did not appear in Alice in Wonderland's book?", correct: "A", options: ["The Doorknob", "The Dormouse", "The Dodo", "The Frog-Footman"] },
-        { question: "Where is a hidden Mickey in the movie?", correct: "C", options: ["A. In the scene where Alice meets the caterpiller it is behind a leaf stem.", "In the scene where Alice meets the Cheshire Cat, it is visable next to a sign on the tree.", "C.  In the scene where Alice grows and gets stuck in the White Rabbit's house, in Dodo bird's pipe flame", "D. In the tea party scene, it is inside the incriptions of the tea pots"] }
+        { question: "The Mad Hatter's name is based on what historical basis?", correct: "B", options: ["A. People who wore hats were crazy", "B. Mercury was used in hat making", "C. Hat making as seen as an unskilled profession", "D. Hats were once believed to make people go crazy"] },
+        { question: "Which character did not appear in Alice in Wonderland's book?", correct: "A", options: ["A. The Doorknob", "B. The Dormouse", "C. The Dodo", "D. The Frog-Footman"] },
+        { question: "Where is a hidden Mickey in the movie?", correct: "C", options: ["A. In the scene where Alice meets the caterpiller it is behind a leaf stem.", "B. In the scene where Alice meets the Cheshire Cat, it is visable next to a sign on the tree.", "C.  In the scene where Alice grows and gets stuck in the White Rabbit's house, in Dodo bird's pipe flame", "D. In the tea party scene, it is inside the incriptions of the tea pots"] }
     ];
     const punishments = ["right", "down", "flash", "lang"]
 
