--- a/question.html
+++ b/question.html
@@ -217,7 +217,7 @@
     }
     //Initialize a list of all possible questions objects, with their possible answers and correct answers
     const questions = [
-        { question: "What is the White Rabbit\’s catchphrase?", correct: "D", options: ["A. Let's go, let's go, let's go!", "B. Hurry up, hurry up, hurry up!", "C. My time has come! ", "D. I'm late, I'm late, I'm late!"] },
+        { question: "What is the White Rabbit\'s catchphrase?", correct: "D", options: ["A. Let's go, let's go, let's go!", "B. Hurry up, hurry up, hurry up!", "C. My time has come! ", "D. I'm late, I'm late, I'm late!"] },
         { question: "How many songs are in Alice in Wonderland?", correct: "B", options: ["A. 7", "B. 14", "C. 11", "D. 5"] },
         { question: "What color dress does Alice wear?", correct: "A", options: ["A. Blue and White", "B. Orange And White", "C. Purple and Blue", "D. Red and Blue"] },
         { question: "What is the Queen\'s full name?", correct: "D", options: ["A. The Queen of Diamond", "B. The Queen of Spades", "C. The Queen of Clubs", "D. The Queen of Hearts"] },
