--- a/question.html
+++ b/question.html
@@ -197,7 +197,7 @@
     let trueQ = "";
     var someVar2 = 0;
     var langIsFirstRun = 1;
-    const lang = ["Меня зовут Уолтер Хартвелл Уайт?", "私の名前はウォルター・ハートウェル・ホワイトです?", "मेरा नाम वाल्टर हार्टवेल व्हाइट है?", "ངའི་མིང་ལ་ཝོལ་ཊར་ཧར་ཊི་ཝེལ་ཝའིཊ་ཟེར།?", "મારું નામ વોલ્ટર હાર્ટવેલ વ્હાઇટ છે?"]
+    const lang = ["\М\е\н\я \з\о\в\у\т\ \Уолтер Хартвелл Уайт?", "私の名前はウォルター・ハートウェル・ホワイトです?", "मेरा नाम वाल्टर हार्टवेल व्हाइट है?", "ངའི་མིང་ལ་ཝོལ་ཊར་ཧར་ཊི་ཝེལ་ཝའིཊ་ཟེར།?", "મારું નામ વોલ્ટર હાર્ટવેલ વ્હાઇટ છે?"]
     function changeLanguage() {
         if (langIsFirstRun == 1) {
             langIsFirstRun = 0;
