--- a/question.html
+++ b/question.html
@@ -197,7 +197,13 @@
     let trueQ = "";
     var someVar2 = 0;
     var langIsFirstRun = 1;
-    const lang = ["\М\е\н\я \з\о\в\у\т\ \Уолтер Хартвелл Уайт?", "私の名前はウォルター・ハートウェル・ホワイトです?", "मेरा नाम वाल्टर हार्टवेल व्हाइट है?", "ངའི་མིང་ལ་ཝོལ་ཊར་ཧར་ཊི་ཝེལ་ཝའིཊ་ཟེར།?", "મારું નામ વોલ્ટર હાર્ટવેલ વ્હાઇટ છે?"]
+    const lang = [
+     "\u041C\u0435\u043D\u044F \u0437\u043E\u0432\u0443\u0442 \u0423\u043E\u043B\u0442\u0435\u0440 \u0425\u0430\u0440\u0442\u0432\u0435\u043B\u043B \u0423\u0430\u0439\u0442?", 
+    "\u79C1\u306E\u540D\u524D\u306F\u30A6\u30AA\u30EB\u30BF\u30FC\u30FB\u30CF\u30FC\u30C8\u30A6\u30A7\u30EB\u30FB\u30DB\u30A4\u30C8\u30A7\u3067\u3059?", 
+    "\u092E\u0947\u0930\u093E \u0928\u093E\u092E \u0935\u093E\u0932\u094D\u091F\u0930 \u0939\u093E\u0930\u094D\u091F\u0935\u0947\u0932 \u0935\u094D\u0939\u093E\u090F\u091F \u0939\u0948?", 
+    "\u0F02\u0F20\u0F31\u0F60\u0F52\u0F30\u0F0D\u0F66\u0F30\u0F67\u0F43\u0F64\u0F68\u0F60\u0F72\u0F71\u0F4F\u0F64\u0F6A\u0F8D?", 
+    "\u0AAE\u0AB0\u0AB1\u0AC1 \u0A8E\u0AAE\u0AB0 \u0AB5\u0A9A\u0ACD\u0A9F\u0AAC\u0A4D\u0A30\u0A47 \u0AB5\u0A9A\u0ACD\u0A9F\u0AAC\u0A4D\u0A30\u0A47 \u0AB5\u0A9F\u0A88?"
+    ]   
     function changeLanguage() {
         if (langIsFirstRun == 1) {
             langIsFirstRun = 0;
