--- a/leaderboard.html
+++ b/leaderboard.html
@@ -26,6 +26,11 @@ Unicode Character “🏆” (U+1F3C6) - &#127942
     
                 </tbody>
         </table>
+        <div class="center">
+            <button id="playAgain" class="playAgain" onclick="location.href='index.html'">
+                Play Again?
+            </button>
+        </div>
     </body>
 
 
